site first draft

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -1,16 +1,83 @@
 ---
-title: Home
+title: Eric Campbell
 ---
 
-<h2>Welcome</h2>
+<div>
+<img src="/images/profile.jpg" style="float: left; margin: 10px;
+				      width:200px;" />
 
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
+<p>I am a first-year PhD student at Cornell interested in solving
+  theoretical problems of industrial relevence. My interests include
+  language design, algebra, graph theory, formal verification, and
+  linguistics.</p>
 
-<p>Welcome to my blog!</p>
+<p>I just graduated from Pomona College
+  where I wrote my mathematics thesis with Michael Greenberg on
+  Finite-Trace Temporal Logic and Temporal Netkat. </p>
 
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
+</div>
 
-<h2>Posts</h2>
-$partial("templates/post-list.html")$
+<div>
+  <h2>News</h2>
+  <ul>
+    <li>
+      5/23 -- Talked about my work on LTLf and Temporal NetKAT at
+      Cornell's PLDG
+    </li>
+    <li>
+      4/15 -- Officially decided to attend Cornell for my PhD
+    </li>
+    <li>
+      4/12 -- Submitted Thesis Manuscript!
+    </li>
+    <li>
+      4/7 -- Thesis Presentation, Done!
+    </li>
+    <li>
+      3/15 -- PhD CSE Visit Day at UCSD
+    </li>
+    <li>
+      3/7 -- PhD CS Visit Day at Princeton University
+    </li>
+    <li>
+      3/2 -- PhD CIS Visit Day at University of Pennsylvania
+    </li>
+  </ul>
+</div>
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<div>
+  <h2>Research Projects</h2>
+  <ul>
+    <li>
+      Temporal NetKat
+    </li>
+    <li>
+      Finite-Trace Temporal Logic
+    </li>
+    <li>
+      Kleene Algebras with Tests
+    </li>
+  </ul>
+</div>
+
+<div>
+  <h2>Publications</h2>
+  <ul>
+    <li><b>Constructing Integer Matrices with Integer
+    Eigenvalues</b>. Christopher Towse and Eric Campbell. In <i>The
+    Mathematical Scientist</i>, UK, June 2016. </li>
+  </ul>
+</div>
+
+<div>
+  <h2>Teaching</h2>
+  <ul>
+    <li>Spring 2017 -- TA for Databases</li>
+    <li>Fall 2016 -- TA for Programming Languages at Pomona (helped
+    with course design and auto-graders</li>
+    <li>Spring 2016 -- Head TA for Intro CS at Pomona</li>
+    <li>Fall 2015 -- TA for Intro CS at Pomona</li>
+  </ul>
+</div>
+
+
