--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - Contact</title>
+	<title>Eric Campbell - Contact</title>
         <link rel="stylesheet" href="./css/default.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="./">My Hakyll Blog</a>
+                <a href="./">Eric Campbell</a>
             </div>
             <div id="navigation">
                 <a href="./">Home</a>
@@ -21,8 +21,7 @@
         </div>
 
         <div id="content">
-            <h1>Contact</h1>
-            <p>I live in a small hut in the mountains of Kumano Kodō on Kii Hantō and would not like to be contacted.</p>
+	  <p>Email me at eric.hayden.campbell@gmail.com or ehc86@cornell.edu. You can also call or text me at 909-343-9392.</p>
         </div>
 
         <div id="footer">
