--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - About</title>
+	<title>Eric Campbell - About</title>
         <link rel="stylesheet" href="./css/default.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="./">My Hakyll Blog</a>
+                <a href="./">Eric Campbell</a>
             </div>
             <div id="navigation">
                 <a href="./">Home</a>
@@ -21,8 +21,7 @@
         </div>
 
         <div id="content">
-            <h1>About</h1>
-            <p>Nullam imperdiet sodales orci vitae molestie. Nunc quam orci, pharetra a rhoncus vitae, eleifend id felis. Suspendisse potenti. Etiam vitae urna orci. Quisque pellentesque dignissim felis, egestas tempus urna luctus vitae. In hac habitasse platea dictumst. Morbi fringilla mattis odio, et mattis tellus accumsan vitae.</p>
+	  <p>Nullam imperdiet sodales orci vitae molestie. Nunc quam orci, pharetra a rhoncus vitae, eleifend id felis. Suspendisse potenti. Etiam vitae urna orci. Quisque pellentesque dignissim felis, egestas tempus urna luctus vitae. In hac habitasse platea dictumst. Morbi fringilla mattis odio, et mattis tellus accumsan vitae.</p>
 <ol style="list-style-type: decimal">
 <li>Amamus Unicode 碁</li>
 <li>Interdum nex magna.</li>
