--- a/archive.html
+++ b/archive.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - Archives</title>
+	<title>Eric Campbell - Archives</title>
         <link rel="stylesheet" href="./css/default.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="./">My Hakyll Blog</a>
+                <a href="./">Eric Campbell</a>
             </div>
             <div id="navigation">
                 <a href="./">Home</a>
@@ -21,8 +21,7 @@
         </div>
 
         <div id="content">
-            <h1>Archives</h1>
-            Here you can find all my previous posts:
+	  Here you can find all my previous posts:
 <ul>
     
         <li>
