modular publication section

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -62,11 +62,7 @@ title: Eric Campbell
 
 <div>
   <h2>Publications</h2>
-  <ul>
-    <li><b>Constructing Integer Matrices with Integer
-    Eigenvalues</b>. Christopher Towse and Eric Campbell. In <i>The
-    Mathematical Scientist</i>, UK, June 2016. </li>
-  </ul>
+  $partial("templates/paper-list.html")$
 </div>
 
 <div>
