--- a/papers/2018-01-08-kmt.html
+++ b/papers/2018-01-08-kmt.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Eric Campbell - Infiniteness and Linear Temporal Logic </title>
+	<title>Eric Campbell - Kleene Algebra Modulo Theories </title>
         <link rel="stylesheet" href="../css/default.css" />
     </head>
     <body>
@@ -22,7 +22,7 @@
 
         <div id="content">
 	  <div class="info">
-    Posted on April 15, 2017
+    Posted on January  8, 2018
     
 </div>
 
