--- a/my-site/index.html
+++ b/my-site/index.html
@@ -34,7 +34,7 @@ title: Eric Campbell
     the field of Programming Languages. My research interests include
     domain-specific language design, type systems, formal semantics,
     algebra, graph theory, and formal verification. I also enjoy
-    linguistics and ballroom dance.</p>
+    linguistics, making espresso, and ballroom dance.</p>
 
   <p> I am currently working to publish my undergraduate thesis work
   (with <a href="http://www.cs.pomona.edu/~michael/">Michael
@@ -54,7 +54,7 @@ title: Eric Campbell
     </tr>
     <tr>
       <td>4/15</td>
-      <td>Accepted Offer of admission at Cornell University</td>
+      <td>Accepted offer of admission at Cornell University</td>
     </tr>
     <tr>
       <td>4/12</td>
@@ -62,7 +62,7 @@ title: Eric Campbell
     </tr>
     <tr>
       <td>4/6&7</td>
-      <td>Thesis Presentations to the Math & CS Departments </td>
+      <td>Thesis Presentations to the Math & CS Departments at Pomona </td>
     </tr>
     <tr>
       <td>3/15</td>
@@ -83,8 +83,12 @@ title: Eric Campbell
   <h2>Research Projects</h2>
   <table>
     <tr style="background: white">
-      <td>Temporal Net<span class="sc">kat</span></td>
-      <td>Finite-Trace Temporal Logic (LTL<sub>f</sub>)</td>
+      <td>
+	<a href="http://www.cs.pomona.edu/~michael/papers/pldi2016.pdf">
+	  Temporal Net<span class="sc">kat</span>
+	</a>
+      </td>
+      <td><a href="/pdfs/thesis.pdf"> Finite-Trace Temporal Logic (LTL<sub>f</sub>)</a></td>
       <td>Kleene Algebra Modulo Theories (KMT) </td>
     </tr>
   </table>
