Add pldg slides

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -50,7 +50,7 @@ title: Eric Campbell
     <tr>
       <td>5/23</td>
       <td>Cornell <a href="http://www.cs.cornell.edu/courses/cs7190/2017sp/">PLDG</a>
-	talk about LTL<sub>f</sub> and Temporal Net<span class="sc">kat</span></td>      
+	talk (<a href="/pdfs/pldg_may_2017.pdf">slides</a>) about LTL<sub>f</sub> and Temporal Net<span class="sc">kat</span></td>      
     </tr>
     <tr>
       <td>4/15</td>
