add pdfs and modularize homepage

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -46,37 +46,7 @@ title: Eric Campbell
 
 <div id="News">
   <h2>News</h2>
-  <table>
-    <tr>
-      <td>5/23</td>
-      <td>Cornell <a href="http://www.cs.cornell.edu/courses/cs7190/2017sp/">PLDG</a>
-	talk (<a href="/pdfs/pldg_may_2017.pdf">slides</a>) about LTL<sub>f</sub> and Temporal Net<span class="sc">kat</span></td>      
-    </tr>
-    <tr>
-      <td>4/15</td>
-      <td>Accepted offer of admission at Cornell University</td>
-    </tr>
-    <tr>
-      <td>4/12</td>
-      <td>Submitted Thesis Manuscript!</td>
-    </tr>
-    <tr>
-      <td>4/6&7</td>
-      <td>Thesis Presentations to the Math & CS Departments at Pomona </td>
-    </tr>
-    <tr>
-      <td>3/15</td>
-      <td>PhD CSE Visit Day at UCSD</td>
-    </tr>
-    <tr>
-      <td>3/7</td>
-      <td>PhD CS Visit Day at Princeton</td>
-    </tr>
-    <tr>
-      <td>3/2</td>
-      <td>PhD CIS Visit Day at UPenn</td>
-    </tr>
-  </table>
+  $partial("templates/news.html")$
 </div>
 
 <div id="research">
@@ -89,7 +59,8 @@ title: Eric Campbell
 	</a>
       </td>
       <td><a href="/pdfs/thesis.pdf"> Finite-Trace Temporal Logic (LTL<sub>f</sub>)</a></td>
-      <td>Kleene Algebra Modulo Theories (KMT) </td>
+      <td><a href="/pdfs/kmt.pdf"> Kleene Algebra Modulo Theories
+      (KMT)</a> </td>
     </tr>
   </table>
 </div>
@@ -101,31 +72,7 @@ title: Eric Campbell
 
 <div>
   <h2>Teaching</h2>
-  <table>
-    <tr>
-      <td>Sp '17</td>
-      <td><a href="http://catalog.pomona.edu/preview_course.php?catoid=21&coid=86724&print">Database
-      Systems</a> at Pomona</td>
-    </tr>
-    <tr>
-      <td>Fa '16</td>
-      <td>TA for <a href="http://www.cs.pomona.edu/classes/cs131/">
-	  Programming Languages</a> at Pomona
-      </td>
-    </tr>
-    <tr>
-      <td>Sp '16</td>
-      <td>Head TA
-      for <a href="http://www.cs.pomona.edu/classes/cs051/">Intro CS
-      (Java)</a> at Pomona</td>
-    </tr>
-    <tr>
-      <td>Fa '15</td>
-      <td>TA
-      for <a href="http://www.cs.pomona.edu/classes/cs051/">Intro CS
-      (Java)</a> at Pomona</td>
-    </tr>
-  </table>
+  $partial("templates/teaching-list.html")$
 </div>
 
 
