--- a/papers/2017-04-15-thesis.html
+++ b/papers/2017-04-15-thesis.html
@@ -21,12 +21,14 @@
         </div>
 
         <div id="content">
-	  <div class="info">
-    Posted on April 15, 2017
-    
+	  <div>
+  <h2> Infiniteness and Linear Temporal Logic </h2>
+  <h3> Eric Campbell </h3>
+  We submitted the <a href="../pdfs/thesis.pdf">manuscript</a> to Pomona College in May 2017. 
+  
+  Presentation slides can be found <a href="../pdfs/math_thesis_prez.pdf"> here</a>.
+  
 </div>
-
-
 
         </div>
 
