--- a/papers/2018-01-08-kmt.html
+++ b/papers/2018-01-08-kmt.html
@@ -21,12 +21,12 @@
         </div>
 
         <div id="content">
-	  <div class="info">
-    Posted on January  8, 2018
-    
+	  <div>
+  <h2> Kleene Algebra Modulo Theories </h2>
+  <h3> Ryan Beckett, Eric Campbell, and Michael Greenberg </h3>
+  We submitted the <a href="../pdfs/thesis.pdf">manuscript</a> to POPL in January 2018. 
+  
 </div>
-
-
 
         </div>
 
