--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </td>
       <td>
 	
-	<a href="./pdfs/thesis.pdf"> PDF </a>
+	<a href="./pdfs/kmt.pdf"> PDF </a>
 	
       </td>
       <td>
