--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     
     <tr>
       <td>
-        <b>Infiniteness and Linear Temporal Logic</b>. Eric Campbell. <i>Pomona College</i>. May 2017.
+        <b>Infiniteness and Linear Temporal Logic</b>. Eric Campbell, advised by Michael Greenberg. <i>Pomona College</i>. May 2017.
 	
 	[Undergraduate Thesis]
 	
