--- a/papers/2016-06-15-imies.html
+++ b/papers/2016-06-15-imies.html
@@ -24,10 +24,14 @@
 	  <div>
   <h2> Constructing Integer Matrices with Integer Eigenvalues </h2>
   <h3> Christopher Towse and Eric Campbell </h3>
-  We submitted the <a href="../pdfs/imies.pdf">manuscript</a> to The Mathematical Scientist, UK in June 2016. 
+
+  <p>Developed a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created a web app to create an IMIE from an arbitrary input matrix.</p>
+  
+  <p> We submitted the <a href="../pdfs/imies.pdf">manuscript</a> to The Mathematical Scientist, UK in June 2016. 
   
   Presentation slides can be found <a href="../pdfs/imies_prez.pdf"> here</a>.
   
+  </p>
 </div>
 
         </div>
