--- a/papers/2018-01-08-kmt.html
+++ b/papers/2018-01-08-kmt.html
@@ -24,8 +24,12 @@
 	  <div>
   <h2> Kleene Algebra Modulo Theories </h2>
   <h3> Ryan Beckett, Eric Campbell, and Michael Greenberg </h3>
-  We submitted the <a href="../pdfs/kmt.pdf">manuscript</a> to POPL in January 2018. 
+
+  <p>Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.</p>
   
+  <p> We submitted the <a href="../pdfs/kmt.pdf">manuscript</a> to POPL in January 2018. 
+  
+  </p>
 </div>
 
         </div>
