--- a/my-site/index.html
+++ b/my-site/index.html
@@ -22,7 +22,11 @@ title: Eric Campbell
 	    Linkedin
 	  </a>
 	</p>
-	  
+	<p>
+	  <a href="/pdfs/resume.pdf">
+	    resume
+	  </a>
+	</p>
     </div>
   </div>
 </div>
