--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 	    Linkedin
 	  </a>
 	</p>
-	  
+	<p>
+	  <a href="./pdfs/resume.pdf">
+	    resume
+	  </a>
+	</p>
     </div>
   </div>
 </div>
