--- a/my-site/index.html
+++ b/my-site/index.html
@@ -9,24 +9,29 @@ title: Eric Campbell
     <h2> PhD Student, Cornell University </h2>
     <h2> Department of Computer Science </h2>
     <div id="contact">
-	<p>email: ehc86@cornell.edu</p>
-	<p>
-	  <a href="https://github.com/ericthewry">
+      <p>email: ehc86@cornell.edu</p>
+      <table>
+	<tr style="background: white">
+	  <td><a href="https://github.com/ericthewry">
 	    <img src="/images/github.png" width="15" height="15"/>
 	    Github
-	  </a>
-	</p>
-	<p>
-	  <a href="https://www.linkedin.com/in/eric-campbell-ba339490/">
-	    <img src="/images/linkedin.png" width="15" height="15"/>
-	    Linkedin
-	  </a>
-	</p>
-	<p>
-	  <a href="/pdfs/resume.pdf">
-	    Resume
-	  </a>
-	</p>
+	  </a></td>
+	  <td><a href="/pdfs/cv.pdf"> Vita</a></td>
+	</tr>
+	<tr>
+	  <td>
+	    <a href="https://www.linkedin.com/in/eric-campbell-ba339490/">
+	      <img src="/images/linkedin.png" width="15" height="15"/>
+	      Linkedin
+	    </a>
+	  </td>
+	  <td>
+	    <a href="/pdfs/resume.pdf">
+	      Resume
+	    </a>
+	  </td>
+	</tr>
+      </table>
     </div>
   </div>
 </div>
