--- a/papers/2017-04-15-thesis.html
+++ b/papers/2017-04-15-thesis.html
@@ -21,12 +21,18 @@
         </div>
 
         <div id="content">
-	  <div class="info">
-    Posted on April 15, 2017
-    
+	  <div>
+  <h2> Infiniteness and Linear Temporal Logic </h2>
+  <h3> Eric Campbell, advised by Michael Greenberg </h3>
+
+  <p>Proved Soundness, Completeness and Decidability for Finite-Trace Linear Temporal Logic. Developed a decision procedure for the logic. Proved the axiomatization equivalent to the temporal axioms in Temporal NetKAT, making a completeness proof possible for TNK.</p>
+  
+  <p> We submitted the <a href="../pdfs/thesis.pdf">manuscript</a> to Pomona College in May 2017. 
+  
+  Presentation slides can be found <a href="../pdfs/math_thesis_prez.pdf"> here</a>.
+  
+  </p>
 </div>
-
-
 
         </div>
 
