--- a/teaching/2016-01-01-head_intro_po.html
+++ b/teaching/2016-01-01-head_intro_po.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Eric Campbell - Constructing Integer Matrices with Integer Eigenvalues </title>
+	<title>Eric Campbell - 2016-01-01-head_intro_po </title>
         <link rel="stylesheet" href="../css/default.css" />
     </head>
     <body>
@@ -21,18 +21,7 @@
         </div>
 
         <div id="content">
-	  <div>
-  <h2> Constructing Integer Matrices with Integer Eigenvalues </h2>
-  <h3> Christopher Towse and Eric Campbell </h3>
-
-  <p>Developed a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created a web app to create an IMIE from an arbitrary input matrix.</p>
-  
-  <p> We submitted the <a href="../pdfs/imies.pdf">manuscript</a> to The Mathematical Scientist, UK in June 2016. 
-  
-  Presentation slides can be found <a href="../pdfs/imies_prez.pdf"> here</a>.
-  
-  </p>
-</div>
+	  <h2> 404 page not found</h2>
 
         </div>
 
