--- a/my-site/index.html
+++ b/my-site/index.html
@@ -39,7 +39,7 @@ title: Eric Campbell
 <div id="blurb">
   <h2> About Me </h2>
   <p>I am a first-year PhD student at Cornell interested in solving
-    theoretical problems of industrial relevence -- specifically in
+    theoretical problems of industrial relevance -- specifically in
     the field of Programming Languages. My research interests include
     domain-specific language design, type systems, formal semantics,
     algebra, graph theory, and formal verification. I also enjoy
