--- a/my-site/index.html
+++ b/my-site/index.html
@@ -1,11 +1,11 @@
 ---
-title: Eric Campbell
+title: Eric Hayden Campbell
 ---
 
 <div id="profile" >
   <img class=".float-left" src="/images/profile.jpg" style="margin: 10px; width:200px;" />
   <div id="info">
-    <h1> Eric Campbell </h1>
+    <h1> Eric Hayden Campbell </h1>
     <h2> PhD Student, Cornell University </h2>
     <h2> Department of Computer Science </h2>
     <div id="contact">
