--- a/papers/2016-06-15-imies.html
+++ b/papers/2016-06-15-imies.html
@@ -25,13 +25,17 @@
   <h2> Constructing Integer Matrices with Integer Eigenvalues </h2>
   <h3> Christopher Towse and Eric Campbell </h3>
 
-  <p>Developed a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created a web app to create an IMIE from an arbitrary input matrix.</p>
+  <!-- <p>Developed a construction algorithm for Integer Matrices with Integer Eigenvalues (IMIEs). Created a web app to create an IMIE from an arbitrary input matrix.</p> -->
   
-  <p> We submitted the <a href="../pdfs/imies.pdf">manuscript</a> to The Mathematical Scientist, UK in June 2016. 
+  <p> We submitted the <a href="../pdfs/imies.pdf">manuscript</a> to The Mathematical Scientist, UK for June 2016. 
   
   Presentation slides can be found <a href="../pdfs/imies_prez.pdf"> here</a>.
   
   </p>
+
+  <h4> Abstract </h4>
+
+  <p>In spite of the provable rarity of integer matrices with integer eigenvalues, they are commonly used as examples in introductory courses. We present a quick method for constructing such matrices starting with a given set of eigenvectors. The main feature of the method is an added level of flexibility in the choice of allowable eigenvalues. The method is also applicable to nondiagonalizable matrices, when given a basis of generalized eigenvectors. We have produced an online web tool that implements these constructions.</p>
 </div>
 
         </div>
