--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
   </tr>
   
   <tr>
+    <td>May 14, 2017</td>
+    <td>Graduated from Pomona College!</td>
+  </tr>
+  
+  <tr>
     <td>April 15, 2017</td>
     <td>Accepted offer of admission to Cornell University.</td>
   </tr>
@@ -104,11 +109,6 @@
   <tr>
     <td>March  7, 2017</td>
     <td>PhD CS Visit Day at Princeton</td>
-  </tr>
-  
-  <tr>
-    <td>March  2, 2017</td>
-    <td>PhD CIS Visit Day at UPenn</td>
   </tr>
   
 </table>
