--- a/news.html
+++ b/news.html
@@ -30,6 +30,11 @@
   </tr>
   
   <tr>
+    <td>May 14, 2017</td>
+    <td>Graduated from Pomona College!</td>
+  </tr>
+  
+  <tr>
     <td>April 15, 2017</td>
     <td>Accepted offer of admission to Cornell University.</td>
   </tr>
