--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
   <table>
   
   <tr>
+    <td>August 22, 2017</td>
+    <td>Successful first day of my PhD at Cornell University!</td>
+  </tr>
+  
+  <tr>
     <td>May 23, 2017</td>
     <td>Cornell <a href="http://www.cs.cornell.edu/courses/cs7190/2017sp/">PLDG</a> talk (<a href="./pdfs/pldg_may_2017.pdf">slides</a>) about LTL<sub>f</sub> and Temporal Net<span class="sc">kat</span></td></td>
   </tr>
@@ -104,11 +109,6 @@
   <tr>
     <td>March 15, 2017</td>
     <td>PhD CSE Visit Day at UCSD</td>
-  </tr>
-  
-  <tr>
-    <td>March  7, 2017</td>
-    <td>PhD CS Visit Day at Princeton</td>
   </tr>
   
 </table>
@@ -190,6 +190,20 @@
 <div>
   <h2>Teaching</h2>
   <table>
+    
+    <tr>
+      <td>
+        Fall 2017
+      </td>
+      <td>
+	TA
+      </td>
+      <td>
+	
+	<a href="http://www.cs.cornell.edu/courses/cs2110/2017fa/">OO Programming and Data Structures</a>
+		at Cornell University
+      </td>
+    </tr>
     
     <tr>
       <td>
