--- a/news.html
+++ b/news.html
@@ -25,6 +25,11 @@
 <table>
   
   <tr>
+    <td>August 22, 2017</td>
+    <td>Successful first day of my PhD at Cornell University!</td>
+  </tr>
+  
+  <tr>
     <td>May 23, 2017</td>
     <td>Cornell <a href="http://www.cs.cornell.edu/courses/cs7190/2017sp/">PLDG</a> talk (<a href="./pdfs/pldg_may_2017.pdf">slides</a>) about LTL<sub>f</sub> and Temporal Net<span class="sc">kat</span></td></td>
   </tr>
