--- a/my-site/index.html
+++ b/my-site/index.html
@@ -9,13 +9,14 @@ title: Eric Hayden Campbell
     <h2> PhD Student, Cornell University </h2>
     <h2> Department of Computer Science </h2>
     <div id="contact">
-      <p>email: ehc86@cornell.edu</p>
+      <p>email: ehc86 [at] institution [dot] edu</p>
+      <p>office: Gates 407 </p>
       <table>
 	<tr style="background: white">
 	  <td><a href="https://github.com/ericthewry">
 	    <img src="/images/github.png" width="15" height="15"/>
-	    Github
-	  </a></td>
+	    Github//ericthewry</a> <sup style="font-size: 9px"> <a href="/whywry.html" title="Why is my handle ericthewry?">[?]</a></sup>
+	  </td>
 	  <td><a href="/pdfs/cv.pdf"> Vita</a></td>
 	</tr>
 	<tr>
