--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
     <h2> PhD Student, Cornell University </h2>
     <h2> Department of Computer Science </h2>
     <div id="contact">
-      <p>email: ehc86@cornell.edu</p>
+      <p>email: ehc86 [at] institution [dot] edu</p>
+      <p>office: Gates 407 </p>
       <table>
 	<tr style="background: white">
 	  <td><a href="https://github.com/ericthewry">
 	    <img src="./images/github.png" width="15" height="15" />
-	    Github
-	  </a></td>
+	    Github//ericthewry</a> <sup style="font-size: 9px"> <a href="./whywry.html" title="Why is my handle ericthewry?">[?]</a></sup>
+	  </td>
 	  <td><a href="./pdfs/cv.pdf"> Vita</a></td>
 	</tr>
 	<tr>
@@ -190,20 +191,6 @@
 <div>
   <h2>Teaching</h2>
   <table>
-    
-    <tr>
-      <td>
-        Fall 2017
-      </td>
-      <td>
-	TA
-      </td>
-      <td>
-	
-	<a href="http://www.cs.cornell.edu/courses/cs2110/2017fa/">OO Programming and Data Structures</a>
-		at Cornell University
-      </td>
-    </tr>
     
     <tr>
       <td>
