--- a/index.html
+++ b/index.html
@@ -194,6 +194,20 @@
     
     <tr>
       <td>
+        Fall 2017
+      </td>
+      <td>
+	TA
+      </td>
+      <td>
+	
+	<a href="http://www.cs.cornell.edu/courses/cs2110/2017fa/">Object Oriented Programming and Data Structures</a>
+		at Cornell University
+      </td>
+    </tr>
+    
+    <tr>
+      <td>
         Spring 2017
       </td>
       <td>
