--- a/whywry.html
+++ b/whywry.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Eric Campbell - ericthewry </title>
+	<title>Eric Campbell - whywry </title>
         <link rel="stylesheet" href="./css/default.css" />
     </head>
     <body>
@@ -21,24 +21,19 @@
         </div>
 
         <div id="content">
-	  <h1>
-Why is my Github handle <code>ericthewry</code>?
-</h1>
+	  <h2 id="why-is-my-github-handle-ericthewry">Why is my Github handle <code>ericthewry</code>?</h2>
 <p>I wanted my Github handle to somehow pertain to the meaning of my name. I’d seen many other Github handles that were initials, names, numbers, partial names, and I was hoping to get something a little bit different. Here’s how I got to <code>ericthewry</code>.</p>
-<p>I was hoping to make my handle mean exactly what my name, <em>Eric Hayden Campbell</em>, means, i.e. <em>everlasting/honored ruler</em> (Eric) <em>heathen</em> (Hayden) and <em>wry-mouthed</em> (Campbell). To me, the handle <code>ericthewry</code> seemed like a concise intimiation, using a near-literal meaning of my last name (<code>wry</code> instead of <em>wry-mouthed</em>, and a naming convention common to everlasting (in memory at least) historical leaders – Attila The Hun, Ivan the Terrible, and now Eric the Wry. I decided to leave out the socially-charged <em>heathen</em> for simplicity.</p>
-<p>However, ever since I created the handle, almost every one of my peer collaborators has asked me what in God’s name <code>ericthewry</code> actually means, and why I chose something so absurd. So, I guess while I thought I was being clever, I just ended up sounded cryptic and pretentious. Unfortunately, now I’m stuck with it.</p>
-<p>A list of just as annoying and just as obtuse alternatives</p>
+<p>I was hoping to make my handle mean exactly what my name, <em>Eric Hayden Campbell</em>, means, i.e. <em>everlasting/honored ruler</em> (Eric) <em>heathen</em> (Hayden) and <em>wry-mouthed</em> (Campbell). To me, the handle 1ericthewry1 seemed like a concise intimiation, using a near-literal meaning of my last name (<code>wry</code> instead of <em>wry-mouthed</em>, and a naming convention common to everlasting (in memory at least) historical leaders – Attila The Hun, Ivan the Terrible, and now Eric the Wry. I decided to leave out the socially-charged <em>heathen</em> for simplicity.</p>
+<p>However, ever since I created the handle, almost every one of my peer collaborators has asked me what in God’s name <code>ericthewry</code> actually means, and why I chose something so absurd. Someone once asked me what “Eric ther Wie” meant. So, I guess while I thought I was being clever, I just ended up sounded cryptic and pretentious. Unfortunately, now I’m stuck with it.</p>
+<p>Here’s a list of just as annoying and just as obtuse alternatives</p>
 <ul>
 <li><code>theonceandfutureking</code></li>
-<li><code>highlandrule</code></li>
 <li><code>everlast</code> (yeah I know its a band)</li>
-<li><code>wry</code></li>
 <li><code>rye</code> (BREAD!)</li>
-<li><code>wryclan</code> (<em>Campbell</em> is the name of a Scottish clan)</li>
 <li><code>odinswry</code> (referencing the Nordic origins of the name <em>Eric</em>)</li>
-<li><code>wryheart</code> (like <em>Braveheart</em>, get it? get it?)</li>
+<li><code>wryheart</code> (like <code>Braveheart</code>, get it? get it?)</li>
 </ul>
-<p>I probably should have just gone with something like <code>ehc</code> or <code>ecamp</code> or <code>ehcampbell</code> or something much more normal.</p>
+<p>In hindsight, I probably should have just gone with something like <code>ehc</code> or <code>ecamp</code> or <code>ehcampbell</code> or something standard</p>
         </div>
 
         <div id="footer">
