Add FoSSaCS submission

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -39,31 +39,43 @@ title: Eric Hayden Campbell
 
 <div id="blurb">
   <h2> About Me </h2>
-  <p>I am a first-year PhD student at Cornell interested in solving
+  <p>
+    I am a first-year PhD student at Cornell interested in solving
     theoretical problems of industrial relevance -- specifically in
     the field of Programming Languages. My research interests include
     domain-specific language design, type systems, formal semantics,
     algebra, graph theory, and formal verification. I also enjoy
-    linguistics, making espresso, and ballroom dance.</p>
+    linguistics, making espresso, and ballroom dance.
+  </p>
 
-  <p> I am currently working to publish my undergraduate thesis work
-  (with <a href="http://www.cs.pomona.edu/~michael/">Michael
-  Greenberg</a> at <a href="https://www.pomona.edu/">Pomona
-  College</a>) on Finite-Trace Linear Temporal Logic and Temporal
-  Net<span class="sc">kat</span>. </p>
+  <p>
+    I'm currently working on making network switches more
+    programmable. I'm currently trying to find a formal model for
+    packet schedulers.
+  </p>
+
+  <p>
+    My undergraduate reasearch
+    at <a href="https://www.pomona.edu/">Pomona College</a> focused on
+    Finite-Trace Logics and Kleene Algebras Modulo Theories
+    with <a href="http://www.cs.pomona.edu/~michael/">Michael
+    Greenberg</a>. My thesis developed novel sound and complete axioms
+    for Linear Temporal Logic on finite traces, as well as a
+    cannonical tableau-based decision procedure.
+  </p>  
+    
   
 </div>
 
 <div id="News">
-  <h2>News</h2>
-  $partial("templates/news.html")$
+  <h2>News</h2> $partial("templates/news.html")$
 </div>
 
 <div id="research">
   <h2>Research Projects</h2>
   <table>
     <tr style="background: white">
-      <td><a href="/pdfs/thesis.pdf"> Finite-Trace Temporal Logic (LTL<sub>f</sub>)</a></td>
+      <td>Logics on Finite Traces [<a href="/pdfs/finite.pdf">1</a>] [<a href="/pdfs/thesis.pdf">2</a>] </td>
       <td><a href="/pdfs/kmt.pdf"> Kleene Algebra Modulo Theories
       (KMT)</a> </td>
     </tr>
