Update with FoSSaCS and new research directions

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -40,22 +40,24 @@ title: Eric Hayden Campbell
 <div id="blurb">
   <h2> About Me </h2>
   <p>
-    I am a first-year PhD student at Cornell interested in solving
-    theoretical problems of industrial relevance -- specifically in
-    the field of Programming Languages. My research interests include
-    domain-specific language design, type systems, formal semantics,
-    algebra, graph theory, and formal verification. I also enjoy
-    linguistics, making espresso, and ballroom dance.
+    I am a first-year PhD student at Cornell interested in solving theoretical
+    problems of industrial significance -- specifically in the field of
+    Programming Languages. My research interests include domain-specific
+    language design, type systems, formal semantics, algebra, graph theory, and
+    formal verification. I also enjoy linguistics, making espresso, and ballroom
+    dance [<a href="https://www.pomona.edu/administration/campus-center/services-programs/claremont-colleges-ballroom-dance-company">1</a>] [<a href="http://latindance.arts.cornell.edu/">2</a>].
   </p>
 
   <p>
-    I'm currently working on making network switches more
-    programmable. I'm currently trying to find a formal model for
-    packet schedulers.
+    I'm currently working
+    with <a href="http://www.cs.cornell.edu/~jnfoster/">Nate Foster</a> on
+    making network switches more programmable. Specifically, we're trying to
+    extend SDN programming languages, like P4, with a programmable packet
+    scheduler. 
   </p>
 
   <p>
-    My undergraduate reasearch
+    My undergraduate research
     at <a href="https://www.pomona.edu/">Pomona College</a> focused on
     Finite-Trace Logics and Kleene Algebras Modulo Theories
     with <a href="http://www.cs.pomona.edu/~michael/">Michael
