--- a/papers/2017-07-15-kmt.html
+++ b/papers/2017-07-15-kmt.html
@@ -27,7 +27,7 @@
 
   <!-- <p>Generate Soundness proofs, Completeness proofs, and Decision procedures for KAs plus a Sound, Complete and Decidable, client theory.</p> -->
   
-  <p> We submitted the <a href="../pdfs/kmt.pdf">manuscript</a> to POPL for July 2017. 
+  <p> We submitted the <a href="../pdfs/kmt.pdf">manuscript</a> to PLDI for November 2017. 
   
   </p>
 
