--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
   <h2>News</h2> <table>
   
   <tr>
+    <td>November  7, 2017</td>
+    <td>Accepted to PLMW @ POPL 2018!</td>
+  </tr>
+  
+  <tr>
     <td>August 22, 2017</td>
     <td>Successful first day of my PhD at Cornell University!</td>
   </tr>
@@ -119,11 +124,6 @@
   <tr>
     <td>April  7, 2017</td>
     <td>Thesis Presentations to the Math and CS departments at Pomona</td>
-  </tr>
-  
-  <tr>
-    <td>March 15, 2017</td>
-    <td>PhD CSE Visit Day at UCSD</td>
   </tr>
   
 </table>
