--- a/news.html
+++ b/news.html
@@ -25,6 +25,11 @@
 <table>
   
   <tr>
+    <td>November  7, 2017</td>
+    <td>Accepted to PLMW @ POPL 2018!</td>
+  </tr>
+  
+  <tr>
     <td>August 22, 2017</td>
     <td>Successful first day of my PhD at Cornell University!</td>
   </tr>
