update with new drafts

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -40,30 +40,49 @@ title: Eric Hayden Campbell
 <div id="blurb">
   <h2> About Me </h2>
   <p>
-    I am a first-year PhD student at Cornell interested in solving theoretical
-    problems of industrial significance -- specifically in the field of
-    Programming Languages. My research interests include domain-specific
-    language design, type systems, formal semantics, algebra, graph theory, and
-    formal verification. I also enjoy linguistics, making espresso, and ballroom
-    dance [<a href="https://www.pomona.edu/administration/campus-center/services-programs/claremont-colleges-ballroom-dance-company">1</a>] [<a href="http://latindance.arts.cornell.edu/">2</a>].
+    I am a second-year PhD student
+    at <a href="https://www.cs.cornell.edu/">Cornell University </a>
+    interested in solving theoretical problems of industrial
+    significance -- specifically at the intersection of Networking and
+    Formal Methods/Programming Languages. My research interests
+    include domain-specific language design, type systems, formal
+    semantics, algebra, graph theory, and formal verification. I also
+    enjoy linguistics, making espresso, and ballroom dance
+    [<a href="https://www.pomona.edu/administration/campus-center/services-programs/claremont-colleges-ballroom-dance-company">1</a>]
+    [<a href="http://latindance.arts.cornell.edu/">2</a>].
+  </p>
+
+  <p> For the summer, I'm working
+  with <a href="http://www.fujitsu.com/us/about/businesspolicy/tech/rd/research-staff/alex-horn.html">Alex
+  Horn</a>
+  at <a href="http://www.fujitsu.com/us/about/businesspolicy/tech/rd/">Fujitsu
+  Labs of America </a> to improve the understanding of IP-prefix based
+  forwarding-networks.
   </p>
 
   <p>
-    I'm currently working
-    with <a href="http://www.cs.cornell.edu/~jnfoster/">Nate Foster</a> on
-    making network switches more programmable. Specifically, we're trying to
-    extend SDN programming languages, like P4, with a programmable packet
-    scheduler. 
+    My advisor at Cornell is
+     <a href="http://www.cs.cornell.edu/~jnfoster/">Nate Foster</a> on
+    making network switches more programmable. We're currently working
+    on a network programming language that integrates forwarding rules
+    with parsing.
   </p>
 
   <p>
     My undergraduate research
     at <a href="https://www.pomona.edu/">Pomona College</a> focused on
-    Finite-Trace Logics and Kleene Algebras Modulo Theories
+    Finite-Trace Logics
     with <a href="http://www.cs.pomona.edu/~michael/">Michael
     Greenberg</a>. My thesis developed novel sound and complete axioms
     for Linear Temporal Logic on finite traces, as well as a
-    cannonical tableau-based decision procedure.
+    cannonical tableau-based decision procedure. This was used to
+    prove completeness
+    for <a href="http://www.cs.pomona.edu/~michael/papers/pldi2016_preprint.pdf">Temporal
+    NetKAT</a> in the generic framework
+    of <a href="./pdfs/kmt.odf">Kleene Algebra Modulo
+    Theories</a>. Subsequent work has investigated completeness for
+    Linear Dynamic Logic and its counterpart Linear Dynamic Logic over
+    finite traces.
   </p>  
     
   
