--- a/my-site/index.html
+++ b/my-site/index.html
@@ -64,8 +64,8 @@ title: Eric Hayden Campbell
     My advisor at Cornell is
      <a href="http://www.cs.cornell.edu/~jnfoster/">Nate Foster</a> on
     making network switches more programmable. We're currently working
-    on a network programming language that integrates forwarding rules
-    with parsing.
+    on protocol-independent extensions to NetKAT and programmable
+    packet scheduling.
   </p>
 
   <p>
@@ -81,8 +81,7 @@ title: Eric Hayden Campbell
     NetKAT</a> in the generic framework
     of <a href="./pdfs/kmt.odf">Kleene Algebra Modulo
     Theories</a>. Subsequent work has investigated completeness for
-    Linear Dynamic Logic and its counterpart Linear Dynamic Logic over
-    finite traces.
+    Linear Dynamic Logic and its finite variant.
   </p>  
     
   
@@ -96,9 +95,13 @@ title: Eric Hayden Campbell
   <h2>Research Projects</h2>
   <table>
     <tr style="background: white">
-      <td>Logics on Finite Traces [<a href="/pdfs/finite.pdf">1</a>] [<a href="/pdfs/thesis.pdf">2</a>] </td>
+      <td>Finite Linear Temporal Logic[<a href="/pdfs/finite.pdf">1</a>] [<a href="/pdfs/thesis.pdf">2</a>] </td>
       <td><a href="/pdfs/kmt.pdf"> Kleene Algebra Modulo Theories
-      (KMT)</a> </td>
+	  (KMT)</a> </td>
+    </tr>
+    <tr>
+      <td> (Finite) Linear Dynamic Logic </td>
+      <td> Protocol-Independent Network Programming </td>
     </tr>
   </table>
 </div>
