--- a/news.html
+++ b/news.html
@@ -25,6 +25,11 @@
 <table>
   
   <tr>
+    <td>May  1, 2018</td>
+    <td>I am excited to announce that I will be spending the summer at Fujitsu Laboratories of America!</td>
+  </tr>
+  
+  <tr>
     <td>November  7, 2017</td>
     <td>Accepted to PLMW @ POPL 2018!</td>
   </tr>
