--- a/my-site/index.html
+++ b/my-site/index.html
@@ -62,14 +62,12 @@ title: Eric Hayden Campbell
 
   <p>
     My advisor at Cornell is
-     <a href="http://www.cs.cornell.edu/~jnfoster/">Nate Foster</a> on
-    making network switches more programmable. We're currently working
+     <a href="http://www.cs.cornell.edu/~jnfoster/">Nate Foster</a>. We're currently working
     on protocol-independent extensions to NetKAT and programmable
     packet scheduling.
   </p>
 
-  <p>
-    My undergraduate research
+  <p>    My undergraduate research
     at <a href="https://www.pomona.edu/">Pomona College</a> focused on
     Finite-Trace Logics
     with <a href="http://www.cs.pomona.edu/~michael/">Michael
