--- a/my-site/index.html
+++ b/my-site/index.html
@@ -10,7 +10,7 @@ title: Eric Hayden Campbell
     <h2> Department of Computer Science </h2>
     <div id="contact">
       <p>email: ehc86 [at] institution [dot] edu</p>
-      <p>office: Gates 407 </p>
+      <p>office: Gates 430 </p>
       <table>
 	<tr style="background: white">
 	  <td><a href="https://github.com/ericthewry">
@@ -52,22 +52,28 @@ title: Eric Hayden Campbell
     [<a href="http://latindance.arts.cornell.edu/">2</a>].
   </p>
 
-  <p> For the summer, I'm working
-  with <a href="http://www.fujitsu.com/us/about/businesspolicy/tech/rd/research-staff/alex-horn.html">Alex
+  <p>
+    I am advised by
+     <a href="http://www.cs.cornell.edu/~jnfoster/">Nate
+    Foster</a>. We're currently working on formalisms for networks
+    with programmable and non-programmable hardware,
+    protocol-independent extensions to NetKAT, and type systems for
+    P4.
+  </p>
+
+  
+  <p> Last summer, I worked
+  with <a href="https://scholar.google.com/citations?user=oISf0GQAAAAJ&hl=en">Alex
   Horn</a>
   at <a href="http://www.fujitsu.com/us/about/businesspolicy/tech/rd/">Fujitsu
-  Labs of America </a> to improve the understanding of IP-prefix based
-  forwarding-networks.
+  Labs of America </a> (Alex is now at Apple!). Building on his previous work on the
+   <a href="https://www.usenix.org/system/files/conference/nsdi17/nsdi17-horn-alex.pdf">DeltaNet</a>
+  project, we
+  developed <a href="https://github.com/ahorn/nopticon">Nopticon</a>,
+  which observes a GoBGP network and produces insights into its invariants.
   </p>
 
-  <p>
-    My advisor at Cornell is
-     <a href="http://www.cs.cornell.edu/~jnfoster/">Nate Foster</a>. We're currently working
-    on protocol-independent extensions to NetKAT and programmable
-    packet scheduling.
-  </p>
-
-  <p>    My undergraduate research
+  <p> My undergraduate research
     at <a href="https://www.pomona.edu/">Pomona College</a> focused on
     Finite-Trace Logics
     with <a href="http://www.cs.pomona.edu/~michael/">Michael
@@ -93,13 +99,15 @@ title: Eric Hayden Campbell
   <h2>Research Projects</h2>
   <table>
     <tr style="background: white">
+      <td> <a href="http://frenetic-lang.org/"> Frenetic </a> </td>
+      <td> <a href="/pdfs/safep4.pdf">Types for P4</a></td>
+      <td> <a href="https://github.com/ahorn/nopticon"> Network Invariant Inference </a></td>
+    </tr>
+    <tr>
       <td>Finite Linear Temporal Logic[<a href="/pdfs/finite.pdf">1</a>] [<a href="/pdfs/thesis.pdf">2</a>] </td>
       <td><a href="/pdfs/kmt.pdf"> Kleene Algebra Modulo Theories
 	  (KMT)</a> </td>
-    </tr>
-    <tr>
-      <td> (Finite) Linear Dynamic Logic </td>
-      <td> Protocol-Independent Network Programming </td>
+
     </tr>
   </table>
 </div>
