--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2> Department of Computer Science </h2>
     <div id="contact">
       <p>email: ehc86 [at] institution [dot] edu</p>
-      <p>office: Gates 407 </p>
+      <p>office: Gates 430 </p>
       <table>
 	<tr style="background: white">
 	  <td><a href="https://github.com/ericthewry">
@@ -71,22 +71,28 @@
     [<a href="http://latindance.arts.cornell.edu/">2</a>].
   </p>
 
-  <p> For the summer, I'm working
-  with <a href="http://www.fujitsu.com/us/about/businesspolicy/tech/rd/research-staff/alex-horn.html">Alex
+  <p>
+    I am advised by
+     <a href="http://www.cs.cornell.edu/~jnfoster/">Nate
+    Foster</a>. We're currently working on formalisms for networks
+    with programmable and non-programmable hardware,
+    protocol-independent extensions to NetKAT, and type systems for
+    P4.
+  </p>
+
+  
+  <p> Last summer, I worked
+  with <a href="https://scholar.google.com/citations?user=oISf0GQAAAAJ&hl=en">Alex
   Horn</a>
   at <a href="http://www.fujitsu.com/us/about/businesspolicy/tech/rd/">Fujitsu
-  Labs of America </a> to improve the understanding of IP-prefix based
-  forwarding-networks.
+  Labs of America </a> (Alex is now at Apple!). Building on his previous work on the
+   <a href="https://www.usenix.org/system/files/conference/nsdi17/nsdi17-horn-alex.pdf">DeltaNet</a>
+  project, we
+  developed <a href="https://github.com/ahorn/nopticon">Nopticon</a>,
+  which observes a GoBGP network and produces insights into its invariants.
   </p>
 
-  <p>
-    My advisor at Cornell is
-     <a href="http://www.cs.cornell.edu/~jnfoster/">Nate Foster</a>. We're currently working
-    on protocol-independent extensions to NetKAT and programmable
-    packet scheduling.
-  </p>
-
-  <p>    My undergraduate research
+  <p> My undergraduate research
     at <a href="https://www.pomona.edu/">Pomona College</a> focused on
     Finite-Trace Logics
     with <a href="http://www.cs.pomona.edu/~michael/">Michael
@@ -106,6 +112,16 @@
 
 <div id="News">
   <h2>News</h2> <table>
+  
+  <tr>
+    <td>March 26, 2019</td>
+    <td>Great Works seminar talk [<a href="https://github.com/ericthewry/interpreters">demo</a>]</td>
+  </tr>
+  
+  <tr>
+    <td>May 11, 2018</td>
+    <td>Received Grad Student TA Award for OOP & Data Structures [Nominated by <a href="https://www.cs.cornell.edu/gries/">David Gries</a>]</td>
+  </tr>
   
   <tr>
     <td>May  1, 2018</td>
@@ -132,16 +148,6 @@
     <td>Graduated from Pomona College!</td>
   </tr>
   
-  <tr>
-    <td>April 15, 2017</td>
-    <td>Accepted offer of admission to Cornell University.</td>
-  </tr>
-  
-  <tr>
-    <td>April 12, 2017</td>
-    <td>Submitted Thesis Manuscript!</td>
-  </tr>
-  
 </table>
 
 </div>
@@ -150,13 +156,15 @@
   <h2>Research Projects</h2>
   <table>
     <tr style="background: white">
+      <td> <a href="http://frenetic-lang.org/"> Frenetic </a> </td>
+      <td> <a href="./pdfs/safep4.pdf">Types for P4</a></td>
+      <td> <a href="https://github.com/ahorn/nopticon"> Network Invariant Inference </a></td>
+    </tr>
+    <tr>
       <td>Finite Linear Temporal Logic[<a href="./pdfs/finite.pdf">1</a>] [<a href="./pdfs/thesis.pdf">2</a>] </td>
       <td><a href="./pdfs/kmt.pdf"> Kleene Algebra Modulo Theories
 	  (KMT)</a> </td>
-    </tr>
-    <tr>
-      <td> (Finite) Linear Dynamic Logic </td>
-      <td> Protocol-Independent Network Programming </td>
+
     </tr>
   </table>
 </div>
@@ -164,6 +172,28 @@
 <div id="pubs">
   <h2>Publications</h2>
   <table>
+    
+    <tr>
+      <td>
+        <b>How to Avoid Making a Billion-Dollar Mistake: Type-Safe Data Plane Programming with SafeP4</b>. Matthias Eicholtz, Eric Campbell, Nate Foster, Guido Salvaneschi, Mira Mezini.
+	
+	<i>ECOOP</i>.
+	
+	
+	July 2019.
+	
+	
+      </td>
+      <td>
+	
+	
+	<a href="./pdfs/safep4.pdf"> draft </a>
+	
+      </td>
+      <td>
+	
+	</td>
+    </tr>
     
     <tr>
       <td>
