--- a/news.html
+++ b/news.html
@@ -25,6 +25,16 @@
 <table>
   
   <tr>
+    <td>March 26, 2019</td>
+    <td>Great Works seminar talk [<a href="https://github.com/ericthewry/interpreters">demo</a>]</td>
+  </tr>
+  
+  <tr>
+    <td>May 11, 2018</td>
+    <td>Received Grad Student TA Award for OOP & Data Structures [Nominated by <a href="https://www.cs.cornell.edu/gries/">David Gries</a>]</td>
+  </tr>
+  
+  <tr>
     <td>May  1, 2018</td>
     <td>I am excited to announce that I will be spending the summer at Fujitsu Laboratories of America!</td>
   </tr>
