add SafeP4, NPI events, NSF and GRFP

--- a/my-site/index.html
+++ b/my-site/index.html
@@ -58,20 +58,28 @@ title: Eric Hayden Campbell
     Foster</a>. We're currently working on formalisms for networks
     with programmable and non-programmable hardware,
     protocol-independent extensions to NetKAT, and type systems for
-    P4.
+    P4. Starting in August 2019, my research will be funded by the NSF
+    GRFP.
   </p>
 
-  
-  <p> Last summer, I worked
-  with <a href="https://scholar.google.com/citations?user=oISf0GQAAAAJ&hl=en">Alex
-  Horn</a>
-  at <a href="http://www.fujitsu.com/us/about/businesspolicy/tech/rd/">Fujitsu
-  Labs of America </a> (Alex is now at Apple!). Building on his previous work on the
-   <a href="https://www.usenix.org/system/files/conference/nsdi17/nsdi17-horn-alex.pdf">DeltaNet</a>
-  project, we
-  developed <a href="https://github.com/ahorn/nopticon">Nopticon</a>,
-  which observes a GoBGP network and produces insights into its invariants.
+
+  <p>
+    In my free time, I work
+    with <a href="http://conf.ling.cornell.edu/mr249/">Mats Rooth</a>
+    on a programming language for reasoning about multi-party epistemic
+    constructs in natural language.
   </p>
+  
+  <!-- <p> Last summer, I worked -->
+  <!-- with <a href="https://scholar.google.com/citations?user=oISf0GQAAAAJ&hl=en">Alex -->
+  <!-- Horn</a> -->
+  <!-- at <a href="http://www.fujitsu.com/us/about/businesspolicy/tech/rd/">Fujitsu -->
+  <!-- Labs of America </a> (Alex is now at Apple!). Building on his previous work on the -->
+  <!--  <a href="https://www.usenix.org/system/files/conference/nsdi17/nsdi17-horn-alex.pdf">DeltaNet</a> -->
+  <!-- project, we -->
+  <!-- developed <a href="https://github.com/ahorn/nopticon">Nopticon</a>, -->
+  <!-- which observes a GoBGP network and produces insights into its invariants. -->
+  <!-- </p> -->
 
   <p> My undergraduate research
     at <a href="https://www.pomona.edu/">Pomona College</a> focused on
