--- a/news.html
+++ b/news.html
@@ -26,7 +26,7 @@
   
   <tr>
     <td>June 25, 2019</td>
-    <td>Kicked off our <a href="https://nys4-h.org/career-explorations">Career Explorations Conference</a> for High School Students on Networking and Security!</td>
+    <td>Kicked off our <a href="https://nys4-h.org/career-explorations">Career Explorations Conference</a> for High School Students on Networking and Security! [<a href="./pdfs/Main.zip">LAB</a>]</td>
   </tr>
   
   <tr>
